--- a/src/InputReader.csproj
+++ b/src/InputReader.csproj
@@ -26,23 +26,17 @@
 		<Description>Provides helper functions to read input value from console</Description>
 		<PackageIcon>logo.png</PackageIcon>
 		<Copyright>TechBuddyTR Youtube</Copyright>
-		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageLicenseFile>..\licenses\LICENSE.txt</PackageLicenseFile>
+		<PackageReadmeFile>..\README.md</PackageReadmeFile>
 		<PackageProjectUrl>https://github.com/salihcantekin/InputReader</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/salihcantekin/InputReader</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
 
-
 	<ItemGroup>
 		<Content Include="logo.png" Pack="true" PackagePath="">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
-	</ItemGroup>
-
-	<ItemGroup>
-		<None Include="licenses\LICENSE.txt" Pack="true" PackagePath="" />
-		<None Include="README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
