--- a/tests/TestConsoleApp/TestConsoleApp.csproj
+++ b/tests/TestConsoleApp/TestConsoleApp.csproj
@@ -6,6 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <!--<ItemGroup>
+    <PackageReference Include="ConsoleInputReader" Version="1.0.0" />
+  </ItemGroup>-->
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\InputReader.csproj" />
   </ItemGroup>
