--- a/src/InputReader.csproj
+++ b/src/InputReader.csproj
@@ -28,6 +28,7 @@
 		<PackageProjectUrl>https://github.com/salihcantekin/InputReader</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/salihcantekin/InputReader</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
+		<Version>1.1.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
