- AllowedValues for StringInputReader added - AllowedValues for IntInputReader added

--- a/tests/InputReaderUnitTest/InputReaderUnitTest.csproj
+++ b/tests/InputReaderUnitTest/InputReaderUnitTest.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="QueueItems\" />
     <Folder Include="With\" />
     <Folder Include="WithDefaultMessageTests\" />
   </ItemGroup>
